test/files/neg/t3692-new.check
t3692-new.scala:16: error: unreachable code
      case m2: Map[T, Int] => new java.util.HashMap[T, Integer]
                              ^
one error found
